<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="17dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text = "@string/user_name"/>

        <TextView
            android:id="@+id/tv_user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/detail"/>

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_below="@id/img_item_photo"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="0.5"
                    android:text="@string/company"
                    android:textSize="12sp"/>

            </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>